--- a/app/home.html
+++ b/app/home.html
@@ -54,15 +54,21 @@
 
     </section>
 
-
+    <!-- Angular -->
     <script src="../vendor/angular/angular.min.js"></script>
     <script src="../vendor/angular-animate/angular-animate.min.js"></script>
     <script src="../vendor/angular-aria/angular-aria.min.js"></script>
     <script src="../vendor/angular-route/angular-route.min.js"></script>
+    <script src="../vendor/angular-resource/angular-resource.min.js"></script>
     <script src="../vendor/angular-material/angular-material.min.js"></script>
+    <script src="../vendor/angular-websql/angular-websql.min.js"></script>
+
     <!-- App Package -->
     <script src="app.js"></script>
-    <script src="common/breadcrumbs.js"></script>
+    <script src="common/models/model.js"></script>
+    <script src="common/services/breadcrumbs.js"></script>
+    <script src="common/services/database.js"></script>
+    <script src="common/resources/datatypes.js"></script>
     <script src="enter-product-list/enterproductlist.js"></script>
     <script src="product-card/productcard.js"></script>
 </body>
