--- a/app/enter-product-list/enterproductlist.html
+++ b/app/enter-product-list/enterproductlist.html
@@ -8,12 +8,11 @@
                         <md-list-item class="md-2-line">
                             <div class="md-list-item-text">
                                 <h3 class="md-headline">{{product.name}}</h3>
-                                <p>{{product.description}}</p>
                             </div>
                         </md-list-item>
                     </md-list>
                     <span flex></span>
-                    <md-icon md-svg-icon="action:edit"></md-icon>
+                    <md-icon class="secondaryaction" md-svg-icon="action:edit"></md-icon>
                 </md-whiteframe>
             </div>
         </md-tab>
