--- a/app/home.html
+++ b/app/home.html
@@ -4,6 +4,8 @@
     <title>Plannehr</title>
     <!-- viewport for web apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!-- Roboto Normal 400" Medium 500 Thin 100 Light 300 -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,500,100,300">
     <link rel="stylesheet" href="../vendor/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
