--- a/app/product-card/productcard.html
+++ b/app/product-card/productcard.html
@@ -22,7 +22,7 @@
     </div>
 
     <div layout="column" layout-align="center end">
-        <md-button class="md-primary" ng-click="add();">OK</md-button>
+        <md-button class="md-primary md-hue-2" ng-click="add();">OK</md-button>
     </div>
 </div>
 
